--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Task Management System</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="index.js">
+<!--   <link rel="stylesheet" href="index.js"> -->
 </head>
 <body>
   <h2>🌟 Task Management System</h2>
@@ -33,5 +33,7 @@
   </form>
   <h3>🗂️ Task List</h3>
   <div id="taskList"></div>
+  <script src="index.js"></script>
 </body>
 </html>
+
